test/ui/src/compile_fail/std/emit_props_ts.stderr
error: specify the timestamp using the `extent` control parameter before the template
 --> src/compile_fail/std/emit_props_ts.rs:2:29
  |
2 |     emit::emit!("template", ts: "2024-01-01T00:00:00.000Z");
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
